# AUF_sim

./: CMakeLists.txt  README.md  main.cpp
include/: AUF_sim.h  jacobian.h  matplotlib.h  model.h  save_data.h
src/: AUF_sim.cpp  jacobian.cpp  model.cpp  save_data.cpp
